--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 header {
   text-align: center;
   padding: 60px 20px;
-  background: url('header-bg.png') no-repeat center center/cover;
-  color: white;
+  background: url('header-bg.jpg') no-repeat center center/cover;
+  color: black;
   overflow: hidden;
 }
 
