Update CSS afinal update

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ header {
   text-align: center;
   padding: 60px 20px;
   background: url('header-bg.jpg') no-repeat center center/cover;
-  color: black;
+  color: white;
   overflow: hidden;
 }
 
