--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header {
 }
 
 header h1, header p {
+    color: white;
   opacity: 0;
   transform: translateY(-20px);
   animation: fadeIn 1s forwards;
